# cartesio_planning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
action/: CartesioGoalGenerator.action
bagfiles/: experimental_setup.bag  narrow_corridor.bag  narrow_corridor1.bag  narrow_corridor2.bag  narrow_corridor2_exp.bag  postural_traj.bag  short_corridor.bag  short_corridor_exp.bag  subset.bag  subset1.bag
bindings/python/: CMakeLists.txt  NSPG.cpp  cartesio_planning.cpp  constraints.cpp  pyPlannerClient.cpp  validity_check.cpp  visual_tools.cpp
examples/: CMakeLists.txt
examples/launch/: .example_centauro.launch.kate-swp  SE2_model.launch  cartesio.launch  (+17 more)
launch/: cartesio_planning.launch
log/: NSPG_log__0_2021_03_17__10_38_31.mat  NSPG_log__0_2021_03_17__10_42_29.mat  NSPG_log__0_2021_03_17__10_52_29.mat  NSPG_log__0_2021_03_17__11_00_14.mat  NSPG_log__0_2021_03_17__11_04_50.mat  NSPG_log__0_2021_03_17__11_09_50.mat  NSPG_log__0_2021_03_17__11_11_18.mat  NSPG_log__centauro_no_update.mat  NSPG_log__cogimon_no_update.mat  NSPG_log__comanplus_collision_constraint.mat  NSPG_log__high_centauro_corridor_005_05.mat  NSPG_log__high_centauro_corridor_005_1.mat  NSPG_log__high_centauro_corridor_005_2.mat  NSPG_log__high_cogimon_corridor_005_05.mat  NSPG_log__high_cogimon_corridor_005_05_new.mat  NSPG_log__high_cogimon_corridor_005_05_newnew.mat  NSPG_log__high_cogimon_corridor_005_1.mat  NSPG_log__high_cogimon_corridor_005_1_new.mat  NSPG_log__high_cogimon_corridor_005_1_new2.mat  NSPG_log__high_cogimon_corridor_005_1_new3.mat  NSPG_log__high_cogimon_corridor_005_1_newnew.mat  NSPG_log__high_cogimon_corridor_005_2.mat  NSPG_log__high_cogimon_corridor_005_2_new.mat  NSPG_log__high_cogimon_corridor_005_2_newnew.mat  NSPG_log__short_centauro_corridor_005_1.mat  NSPG_log__short_centauro_corridor_005_2.mat  NSPG_log__short_cogimon_corridon_002_1.mat  NSPG_log__short_cogimon_corridor_005_2.mat  NSPG_log_coll_stab_log_comanplus.mat  checks_log__1.mat  checks_log__10.mat  checks_log__10_2021_03_17__10_25_30.mat  checks_log__11_2021_03_17__10_25_41.mat  checks_log__12_2021_03_17__10_25_42.mat  checks_log__13_2021_03_17__10_25_44.mat  checks_log__14_2021_03_17__10_25_45.mat  checks_log__2.mat  checks_log__3.mat  checks_log__4.mat  checks_log__5.mat  (+46 more)
matlab/: cartesio_planning.m
msg/: CartesioPlannerGoalStatus.msg  CartesioPlannerStatus.msg  SetContactFrames.msg  SetGroundCheck.msg
python/: publisher.py
src/: centroidal_statics_test.cpp  goal_generation_test.cpp  octomap_collision_main.cpp  ompl_test.cpp  ompl_test_control.cpp  ompl_test_control.cpp.orig  planning_scene_publisher.cpp  planning_scene_test.cpp  planning_scene_test.cpp.orig  point_cloud_main.cpp  stability_test.cpp  state_publisher.cpp  state_wrapper.cpp  state_wrapper.h
srv/: CartesioFrames.srv  CartesioGoal.srv  CartesioJointStates.srv  CartesioPlanner.srv  FootStepPlanner.srv  SetContactFrames.srv  setX.srv
tests/: CMakeLists.txt  TestApi.cpp  cluttered_test.cpp  ros_msg_parser_test.cpp  test_basics.cpp  test_centroidal_statics_init.cpp  test_manifold.cpp  test_projection.cpp  test_trajectory.cpp
(+148 files in other folders)
